# ChangeLog for app-text/kbarcode
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/kbarcode/ChangeLog,v 1.24 2004/11/23 15:36:12 carlo Exp $

  23 Nov 2004; Carsten Lohrke <carlo@gentoo.org> kbarcode-1.8.0.ebuild,
  kbarcode-1.8.1.ebuild:
  stable on x86

*kbarcode-1.9.1 (29 Oct 2004)

  29 Oct 2004; Carsten Lohrke <carlo@gentoo.org> +kbarcode-1.8.1.ebuild,
  +kbarcode-1.9.1.ebuild:
  version bump

  03 Sep 2004; Danny van Dyk <kugelfang@gentoo.org> kbarcode-1.8.0.ebuild:
  Marked ~amd64.

*kbarcode-1.8.0 (23 Aug 2004)

  23 Aug 2004; Carsten Lohrke <carlo@gentoo.org>
  -files/kbarcode-1.7.2-default-parameter.patch, -kbarcode-1.7.2.ebuild,
  -kbarcode-1.7.4.ebuild, +kbarcode-1.8.0.ebuild:
  version bump

  03 Jul 2004; Carsten Lohrke <carlo@gentoo.org> kbarcode-1.6.2.ebuild,
  kbarcode-1.7.2.ebuild, kbarcode-1.7.4.ebuild:
  QA: need-kde after R/DEPEND

  13 Jun 2004; David Holm <dholm@gentoo.org> kbarcode-1.7.4.ebuild:
  Added to ~ppc.

*kbarcode-1.7.4 (12 Jun 2004)

  12 Jun 2004; Carsten Lohrke <carlo@gentoo.org> kbarcode-1.6.0.ebuild,
  kbarcode-1.6.1.ebuild, kbarcode-1.7.0.ebuild, kbarcode-1.7.4.ebuild:
  version bump, clean up

  07 Mar 2004; Dominik Stadler <centic@gentoo.org> kbarcode-1.7.2.ebuild:
  Revert previous change, we can use DEPEND in RDEPEND if we need to add stuff.

  07 Mar 2004; Dominik Stadler <centic@gentoo.org> kbarcode-1.7.2.ebuild,
  files/kbarcode-1.7.2-default-parameter.patch:
  Added a patch to compile Version 1.7.2. Closes bug #39208. Also corrected
  ebuild to not redefine DEPEND in RDEPEND and to make use of the use-flag
  'imagemagick'.

*kbarcode-1.6.2 (10 Feb 2004)

  10 Feb 2004; Caleb Tennis <caleb@gentoo.org> kbarcode-1.6.2.ebuild:
  Bug fix version

*kbarcode-1.7.2 (21 Jan 2004)

  21 Jan 2004; Caleb Tennis <caleb@gentoo.org> kbarcode-1.7.2.ebuild:
  New version, closes bug #38923

*kbarcode-1.7.0 (19 Jan 2004)
