@@ -1,10 +1,10 @@
 MD5 1f7d5aedbb214f1ea4e29000231c1f4e kbarcode-1.6.2.ebuild 797
-MD5 93083662a4df13904bf52c54f6567870 kbarcode-1.9.1.ebuild 529
 MD5 64c80c87ba3705fd545760d62e9c8920 kbarcode-1.8.0.ebuild 528
-MD5 f445236a74663457ca16c19e93e23929 ChangeLog 3728
+MD5 7f1f3647d914831c6a0e05dd64a66592 kbarcode-1.9.3.ebuild 540
+MD5 57a452b663a0a2f2e5d9bf7eeb88e415 ChangeLog 3888
 MD5 1b6808bbd78c9161f8b7efb090d966f8 metadata.xml 162
 MD5 26a45536b9a1c14fc272bdfb740392ed kbarcode-1.8.1.ebuild 530
 MD5 0cad5178ccab263004d5690481112731 files/digest-kbarcode-1.6.2 136
 MD5 39160cfe334a297c67037afc50d8d08a files/digest-kbarcode-1.8.0 66
 MD5 9b77ca43e8aa87e2dbbff2970e042233 files/digest-kbarcode-1.8.1 66
-MD5 4457a9fdb7f7a984d63c8d5aa3120e80 files/digest-kbarcode-1.9.1 66
+MD5 6b6ec504d4642d43de5e5a3b924ecd7b files/digest-kbarcode-1.9.3 67
