@@ -1,0 +1,1 @@
+MD5 03cdd2480625620964aa4c97de5ae3e5 kbarcode-1.9.3.tar.gz 1085164
