@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/kbarcode/kbarcode-1.9.1.ebuild,v 1.1 2004/10/29 19:02:52 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/kbarcode/kbarcode-1.9.3.ebuild,v 1.1 2004/12/03 19:33:26 carlo Exp $
 
 inherit kde
 
@@ -8,6 +8,7 @@ DESCRIPTION="A KDE 3.x solution for barcode handling."
 HOMEPAGE="http://www.kbarcode.net/"
 SRC_URI="mirror://sourceforge/kbarcode/${P}.tar.gz"
 
+SLOT="0"
 LICENSE="GPL-2"
 KEYWORDS="~x86 ~ppc ~amd64"
 IUSE=""
@@ -15,4 +16,4 @@ IUSE=""
 DEPEND=">=app-text/barcode-0.98"
 RDEPEND=">=app-text/barcode-0.98
 	virtual/ghostscript"
-need-kde 3
+need-kde 3.2
