@@ -1,6 +1,12 @@
 # ChangeLog for app-text/kbarcode
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/kbarcode/ChangeLog,v 1.24 2004/11/23 15:36:12 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/kbarcode/ChangeLog,v 1.25 2004/12/03 19:33:26 carlo Exp $
+
+*kbarcode-1.9.3 (03 Dec 2004)
+
+  03 Dec 2004; Carsten Lohrke <carlo@gentoo.org> -kbarcode-1.9.1.ebuild,
+  +kbarcode-1.9.3.ebuild:
+  newest development version
 
   23 Nov 2004; Carsten Lohrke <carlo@gentoo.org> kbarcode-1.8.0.ebuild,
   kbarcode-1.8.1.ebuild:
